--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body {
 
 .fixed-bar-left li {
     display: inline-block;
-    padding: 0 10px;
+    padding-right: 10px;
 
 }
 
@@ -56,7 +56,7 @@ body {
 
 #trattino {
     border-right: 1px solid  #3d4b5b;
-    padding-right: 25px;
+    padding-right: 15px;
 }
 
 /* .fixed-bar-left li:first-child::before {
@@ -85,13 +85,16 @@ body {
     margin-left: 20px;
 }
 
-.btn-small.get-free {
+.get-free {
     background-color: #ff7a59;
     color: white;
     border: 1px solid #ff7a59;
-    margin-left: 10px;
+
 }
 
+.btn-small.get-free {
+    margin-left: 10px;
+}
 
 /* fine fixed bar */
 
@@ -139,13 +142,33 @@ nav a {
 
 
 .jumbotron {
-    width: 30%;
-    margin-top: 30px;
+    width: 40%;
+    margin-top: 80px;
     position: absolute;
 }
 
-.jumbotron p:first-child {
-    font-size: 1px;
+.jumbotron h1 {
+    font-size: 60px;
+}
+
+.jumbotron p:first-of-type {
+    margin-top: 40px;
+    font-size: 19px;
+    line-height: 30px;
+}
+
+.btn-big.get-free {
+    padding: 20px 40px;
+    font-size: 19px;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+.jumbotron p:nth-child(4) {
+    width: 40%;
+    margin-top: 20px;
+    font-size: 12px;
+    line-height: 20px;
 }
 
 
