--- a/css/style.css
+++ b/css/style.css
@@ -531,7 +531,6 @@ section.azzurro {
 
 .top-footer {
     height: 65%;
-    border: 1px solid black;
 }
 
 
@@ -542,9 +541,22 @@ section.azzurro {
 
 }
 
+.top-footer-title {
+    margin-top: 100px;
+    font-size: 14px;
+    font-weight: bold;
+    color: white;
+}
+
 .top-footer-box ul {
     list-style: none;
+    font-size: 14px;
+    line-height: 30px;
+    margin-top: 10px;
+}
 
+.capitalize {
+    text-transform: capitalize;
 }
 
 .top-footer-box a {
@@ -552,12 +564,22 @@ section.azzurro {
         color: #cbd6da;
 }
 
+.btn-footer {
+    background-color: white;
+    border: white;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: #33475b;
+}
+
+
 .footer-loghi a {
     padding-right: 25px;
+    font-size: 20px;
 }
 
 footer .lingue {
-    height: 70px;
+    margin-top: 150px;
     text-align: center;
     line-height: 70px;
     border-bottom: 1px solid #cbd6da;
@@ -577,17 +599,33 @@ footer .lingue {
     color: #cbd6da;
 }
 
+.footer-bottom {
+    margin-top: 30px;
+    padding-bottom: 50px;
+
+}
 
 .footer-bottom-left {
     width: 20%;
     height: 100%;
     float: left;
+}
 
+.footer-copy {
+    font-size: 12px;
+    color:  #cbd6da;
+    margin-top: 15px;
 }
 
 .footer-bottom-right {
     width: 25%;
     float: right;
     text-align: right;
+}
 
+.footer-bottom-right a {
+    text-decoration: none;
+    color:  #cbd6da;
+    text-transform: capitalize;
+    padding-left: 30px;
 }
