--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ h4 {
     z-index: 1;
     text-transform: capitalize;
     line-height: 70px;
+    border-bottom: 1px solid #cbd6e2;
 }
 
 .fixed-bar-left {
@@ -150,7 +151,7 @@ nav a {
 
 
 .jumbotron {
-    width: 40%;
+    width: 37%;
     margin-top: 80px;
     position: absolute;
     color: #33475b;
@@ -190,32 +191,27 @@ main {
     color:#33475b;
 }
 
-.box {
-    height: 50%;
-
-}
-
-.top.box {
+.big-top-box {
     width: 82%;
     margin: 0 auto;
     text-align: center;
     padding-top: 80px;
 }
 
-.top.box img {
+.big-top-box img {
     height: 200px;
 }
 
-.top.box h2 {
+.big-top-box h2 {
     margin-bottom: 20px;
 }
 
-.top.box p {
+.big-top-box p {
     font-size: 16px;
     line-height: 30px;
 }
 
-.bottom.box {
+.big-bottom-box {
     background-color: white;
     margin-top: 50px;
     border-radius: 5px;
@@ -288,7 +284,7 @@ main {
     color: #ff7a59;
 }
 
-.card {
+.cards {
     width: calc((100% / 3) - 20px);
     float: left;
     text-align: center;
@@ -297,9 +293,10 @@ main {
     margin-bottom: 150px;
     background-color: white;
     border-radius: 5px;
+    box-shadow: 0px 10px 35px #aaaaaa;
 }
 
-.card:nth-of-type(2) {
+.cards:nth-of-type(2) {
     margin-left: 30px;
     margin-right: 30px;
 }
@@ -307,19 +304,19 @@ main {
 .card-container {
     height: 100%;
     padding: 40px;
-    box-shadow: 0px 10px 35px #aaaaaa;
+
 }
 
-.card img {
+.cards img {
     height: 150px;
 }
 
-.card h4 {
+.cards h4 {
     text-transform: capitalize;
     margin-top: 30px;
 }
 
-.card p:nth-child(3) {
+.cards p:nth-child(3) {
     min-height: 130px;
     line-height: 30px;
     font-size: 14px;
@@ -327,11 +324,11 @@ main {
 
 }
 
-.card hr {
+.cards hr {
     color: #808080;
 }
 
-.card p:nth-child(5) {
+.cards p:nth-child(5) {
     text-transform: uppercase;
     margin-top: 20px;
     font-weight: bold;
@@ -339,7 +336,7 @@ main {
 
 }
 
-.card ul {
+.cards ul {
     margin-top: 10px;
     list-style: none;
     text-align: left;
@@ -347,11 +344,11 @@ main {
     font-size: 14px;
 }
 
-.card i {
+.cards i {
     color: #ff7a59;
 }
 
-.card button {
+.cards button {
     margin-top: 20px;
 }
 
@@ -386,7 +383,7 @@ section.azzurro {
     line-height: 25px;
 }
 
-.icons-box {
+.big-icons-box {
     position: relative;
     height: 350px;
 }
@@ -407,8 +404,6 @@ section.azzurro {
 .icon-box:nth-child(4), .icon-box:nth-child(8) {
     border-left: 1px solid white;
 }
-
-
 
 .icon-box {
     width: 25%;
@@ -437,6 +432,10 @@ section.azzurro {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
+}
+
+#no-plus:after {
+    content: '';
 }
 
 .icon-box-container p {
