--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ h4 {
     left: 0;
     background-color: #f4f9fd;
     position: fixed;
-    z-index: 1;
+    z-index: 10;
     text-transform: capitalize;
     line-height: 70px;
     border-bottom: 1px solid #cbd6e2;
@@ -203,12 +203,12 @@ nav a {
     display: block;
 }
 
-#software p, #software span {
+.dropbox-container p, .dropbox-container span {
     font-size: 14px;
 }
 
 .dropbox-container {
-    padding: 30px;;
+    padding: 30px;
     text-transform: none;
 }
 
@@ -241,6 +241,7 @@ nav a {
 .bottom-dropbox-left {
     width: 33.3333%;
     float: left;
+    border: 1px solid black;
 }
 
 .bottom-dropbox-right {
@@ -298,6 +299,14 @@ nav a {
     padding-bottom: 10px;
 }
 
+.middle-dropbox-card h4:first-of-type {
+    display: inline-block;
+}
+
+.middle-dropbox-card span:first-of-type {
+    display: block;;
+}
+
 .middle-resources {
     padding: 10px 0;
     border-top: 1px solid #cbd6e2;
@@ -308,6 +317,92 @@ nav a {
     padding-top: 10px;
 }
 
+
+#partners {
+    display: none;
+    width: 700px;
+    background-color: white;
+    border: 1px solid #cbd6e2;
+    position: absolute;
+    right: 130px;
+    top: 60px;
+    z-index: 3;
+    line-height: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 10px 35px #aaaaaa;
+}
+
+.show:hover #partners {
+    display: block;
+}
+
+#partners:after {
+    content: '';
+    width: 15px;
+    height: 15px;
+    background-color: white;
+    position: absolute;
+    top: -8px;
+    right: 100px;
+    transform: rotate(45deg);
+    z-index: 2;
+    border-top: 1px solid #cbd6e2;
+    border-left: 1px solid #cbd6e2;
+}
+
+.partners-left, .partners-right {
+    width: 50%;
+    float: left;
+}
+
+.partners-container {
+    padding: 10px;
+}
+
+#about {
+    /* display: none; */
+    width: 600px;
+    background-color: white;
+    border: 1px solid #cbd6e2;
+    position: absolute;
+    right: 130px;
+    top: 60px;
+    z-index: 3;
+    line-height: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 10px 35px #aaaaaa;
+}
+
+.show:hover #about {
+    display: block;
+}
+
+#about:after {
+    content: '';
+    width: 15px;
+    height: 15px;
+    background-color: white;
+    position: absolute;
+    top: -8px;
+    right: 12px;
+    transform: rotate(45deg);
+    z-index: 2;
+    border-top: 1px solid #cbd6e2;
+    border-left: 1px solid #cbd6e2;
+}
+
+#about ul {
+    line-height: 30px;
+    padding: 0;
+    margin-left: 0;
+    font-size: 14px;
+    display: block;
+}
+
+#about li {
+    padding: 0;
+}
+
 .banner {
     height: 695px;
     position: relative;
@@ -315,8 +410,6 @@ nav a {
     background-image: url('../img/bg-jumbotron.png');
     background-size: cover;
 }
-
-
 
 .jumbotron {
     width: 37%;
