--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,10 @@ h4 {
     width: 100%;
 }
 
+#choose li{
+    width: 100%;
+}
+
 .show:hover #choose {
     display: block;
 }
@@ -390,16 +394,23 @@ nav a {
     border-left: 1px solid #cbd6e2;
 }
 
+.about-container {
+    padding: 10px;
+}
+
 #about ul {
     line-height: 30px;
     padding: 0;
     margin-left: 0;
     font-size: 14px;
+    float: none;
     display: block;
 }
 
 #about li {
     padding: 0;
+    float: none;
+
 }
 
 .banner {
